WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54693
[EFL] Fix coding style errors in RenderThemeEfl.h
https://bugs.webkit.org/show_bug.cgi?id=54693
Summary
[EFL] Fix coding style errors in RenderThemeEfl.h
Gyuyoung Kim
Reported
2011-02-17 15:42:45 PST
When I run check-webkit-style script with RenderThemeEfl.h, there are many style erros like ewk_view.h. Source/WebCore/platform/efl/RenderThemeEfl.h:37: Ecore_Evas is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/platform/efl/RenderThemeEfl.h:38: Evas_Object is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/platform/efl/RenderThemeEfl.h:104: The parameter name "style" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:104: The parameter name "type" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:149: The parameter name "size" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:181: The parameter name "type" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:182: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:182: The parameter name "states" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:183: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:183: The parameter name "type" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:183: The parameter name "i" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:183: The parameter name "rect" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:208: The parameter name "desc" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:209: The parameter name "o" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:209: The parameter name "desc" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:226: The parameter name "type" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:226: The parameter name "size" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:231: The parameter name "ce" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:231: The parameter name "type" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:232: The parameter name "ce" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:233: The parameter name "type" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:233: The parameter name "size" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:234: The parameter name "type" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:234: The parameter name "ce" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:235: The parameter name "type" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:235: The parameter name "size" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/platform/efl/RenderThemeEfl.h:235: The parameter name "ce" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 27 in 1 files
Attachments
Patch
(3.96 KB, patch)
2011-02-17 16:19 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(3.96 KB, patch)
2011-02-17 17:11 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2011-02-17 16:19:21 PST
Created
attachment 82874
[details]
Patch I make a patch for this. If parameter type represents parameter's meaning well, I think we don't need to add parameter unnecessarily. Other port add just parameter type to function definition. (See also RenderThemeGtk.h, RenderThemeQt.h) However, there are still style errors regarding underscore. Source/WebCore/platform/efl/RenderThemeEfl.h:37: Ecore_Evas is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/platform/efl/RenderThemeEfl.h:38: Evas_Object is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] I don't know how to fix this errors yet.
Gyuyoung Kim
Comment 2
2011-02-17 16:54:08 PST
Comment on
attachment 82874
[details]
Patch There was problem in eflews
Gyuyoung Kim
Comment 3
2011-02-17 17:11:34 PST
Created
attachment 82880
[details]
Patch
WebKit Commit Bot
Comment 4
2011-02-18 19:44:10 PST
Comment on
attachment 82880
[details]
Patch Clearing flags on attachment: 82880 Committed
r79080
: <
http://trac.webkit.org/changeset/79080
>
WebKit Commit Bot
Comment 5
2011-02-18 19:44:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug