2011-02-18  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Reviewed by Kent Tamura.

        [EFL] Fix coding style errors in RenderThemeEfl.h
        https://bugs.webkit.org/show_bug.cgi?id=54693

        Fix style errors in RenderThemeEfl.h

        * platform/efl/RenderThemeEfl.h:

Canonical link: https://commits.webkit.org/69028@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79080 268f45cc-cd09-0410-ab3c-d52691b4dbfc